--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         
     <br><br><br><br>
-    <img src="/Assets/programming.png" alt="" class="bannerimage">
+    <img src="programming.png" alt="" class="bannerimage">
     <section class="banner1">
         <h1>Welcome to Awesome Code</h1>
         <p>Welcome to Awesome Code And In this platform you can Learn to code for free. We also ensure you placements at top IT Companies like </p>
@@ -51,21 +51,21 @@
         <h2 class="heading-b">Top Courses <i class="fa-solid fa-arrow-right"></i></h2>
         <br>
         <div class="course1">
-            <img src="/Assets/pythonlogo.jpg" alt="" class="cardimg">
+            <img src="pythonlogo.jpg" alt="" class="cardimg">
             <h2 class="coursedes">Python Full Course</h2>
             <p>Python Full Course for Beginners, Including Every Important Topic And Notes for Revision.</p>
             <p class="down-a">Learn More <i class="fa-solid fa-arrow-right"></i></p>
         </div>
         <br>
         <div class="course2">
-            <img src="/Assets/clogo.png" alt="" class="clogo">
+            <img src="clogo.png" alt="" class="clogo">
             <h2 class="coursedes1">C Full Course for Beginners</h2>
             <p>C Full Course Especially For Begginers to get a chance to land a job in future with Revision Notes and Recorded Lectures After Each Session.</p>
             <p class="down-a">Learn More <i class="fa-solid fa-arrow-right"></i></p>
         </div>
         <br>
         <div class="course3">
-            <img src="/Assets/C++LOGO.png" alt="" class="clogo" height="80px">
+            <img src="C++LOGO.png" alt="" class="clogo" height="80px">
             <h2 class="coursedes1">C++ Crash Course for Beginners</h2>
             <p>C++ Crash Course For Beginners with Revision Notes And Recorded Lectures</p>
             <p class="down-a">Learn More <i class="fa-solid fa-arrow-right"></i></p>
